--- a/eventSection.html
+++ b/eventSection.html
@@ -34,12 +34,11 @@
             margin-left: 0;
         }
         .move-cars {
-          position: absolute;
           animation: move 6s;
         }
         @keyframes move {
           0%, 100% {
-            right: 100px;
+            transform: translateX(100px);
           }
         }
     </style>
